--- a/cat.html
+++ b/cat.html
@@ -3,25 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Cat clicker</title>
-
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
     <h1>Cat clicker</h1>
 
     <section id="game">
-        <div class="cat">
-            <img src="images/cat-1.jpg" alt="Cat 1"/>
-            <div class="counter">0</div>
+        <div id="cat-list" class="cat">
+            <ul>
+                <li>Gato 1</li>
+                <li>Gato 2</li>
+                <li>Gato 3</li>
+                <li>Gato 4</li>
+                <li>Gato 5</li>
+                <li>Gato 6</li>
+                <li>Gato 7</li>
+                <li>Gato 8</li>
+            </ul>
         </div>
 
-        <div class="cat">
+        <div class="cat cat-container">
             <img src="images/cat-2.jpg" alt="Cat 2"/>
             <div class="counter">0</div>
         </div>
     </section>
 
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
